Integrated user, project and payment component (the HTML part)

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,19 +3,21 @@
     <div class="dashboard-main">
         <app-header></app-header>
         <div class="dashboard-body">
-            <!-- <div class="dashboard-body-title-wrapper">
-                <div class="dashboard-body-title">
-                    <h1>Users</h1>
-                    <div>
-                        <a href="user/create.html" class="button is-primary">New User</a>
+            
+                <div class="dashboard-body-title-wrapper">
+                    <div class="dashboard-body-title">
+                        <h1>Dashboard</h1>
+                        <div>
+                        </div>
                     </div>
                 </div>
-            </div> -->
 
-            <div class="dashboard-content">
+                <div class="dashboard-content">
+                    <!-- actual content goes here -->
+                </div>
 
-            </div>
         </div>
 
     </div>
 </div>
+
