--- a/src/app/components/user/user-edit/user-edit.component.html
+++ b/src/app/components/user/user-edit/user-edit.component.html
@@ -5,7 +5,7 @@
         <div class="dashboard-body">
             <div class="dashboard-body-title-wrapper">
                 <div class="dashboard-body-title">
-                    <h1>Create user</h1>
+                    <h1>Edit user</h1>
                     <div>
                         <a routerLink="/users" class="button is-primary">Back</a>
                     </div>
@@ -39,7 +39,8 @@
                   <button class="button" type="sign up">Create</button>
                 </div>
               </div>
-                
+
+            
             </div>
         </div>
 
