--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -13,7 +13,81 @@
             </div>
 
             <div class="dashboard-content">
+                
+          <table class="table has-alternate-bg">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Phone</th>
+                <th>Created At</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a routerLink="/user/1/show">1</a></td>
+                <td>Test</td>
+                <td>User</td>
+                <td>8990900012</td>
+                <td>May 12, 2021</td>
+                <td><a routerLink="/user/1/edit">Edit</a></td>
+              </tr>
+              <tr>
+                <td><a routerLink="/user/1/show">1</a></td>
+                <td>Test</td>
+                <td>User</td>
+                <td>8990900012</td>
+                <td>May 12, 2021</td>
+                <td><a routerLink="/user/1/edit">Edit</a></td>
+              </tr>
+              <tr>
+                <td><a routerLink="/user/1/show">1</a></td>
+                <td>Test</td>
+                <td>User</td>
+                <td>8990900012</td>
+                <td>May 12, 2021</td>
+                <td><a routerLink="/user/1/edit">Edit</a></td>
+              </tr>
+              <tr>
+                <td><a routerLink="/user/1/show">1</a></td>
+                <td>Test</td>
+                <td>User</td>
+                <td>8990900012</td>
+                <td>May 12, 2021</td>
+                <td><a routerLink="/user/1/edit">Edit</a></td>
+              </tr>
+              <tr>
+                <td><a routerLink="/user/1/show">1</a></td>
+                <td>Test</td>
+                <td>User</td>
+                <td>8990900012</td>
+                <td>May 12, 2021</td>
+                <td><a routerLink="/user/1/edit">Edit</a></td>
+              </tr>
+              
+            </tbody>
+          </table>
+          <div style="margin-top: 1rem;">
+            <div class="pagination">
+              <a href="" class="pagination-prev">
+                <span class="icon">
+                  <i class="ri-arrow-left-line"></i>
+                </span>
+              </a>
+              <a href="" class="pagination-page">
+                <span>1</span>
+              </a>
+              <a href="" class="pagination-next">
+                <span class="icon">
+                  <i class="ri-arrow-right-line"></i>
+                </span>
+              </a>
+            </div>
+          </div>
 
+            
             </div>
         </div>
 
