--- a/src/app/container/sidebar/sidebar.component.html
+++ b/src/app/container/sidebar/sidebar.component.html
@@ -5,21 +5,27 @@
     <div class="dashboard-menu">
         <a class="dashboard-menu-item" routerLink="/dashboard">
             <span class="icon">
-      <i class="ri-dashboard-3-line"></i>    
-    </span>
+                <i class="ri-dashboard-3-line"></i>
+            </span>
             <span>Dashboard</span>
         </a>
         <a class="dashboard-menu-item" routerLink="/users">
             <span class="icon">
-      <i class="ri-folder-user-fill"></i>
-    </span>
+                <i class="ri-group-line"></i>
+            </span>
             <span>Users</span>
         </a>
-        <a class="dashboard-menu-item">
+        <a class="dashboard-menu-item" routerLink="/projects">
             <span class="icon">
-      <i class="ri-folder-shield-fill"></i>
-    </span>
+                <i class="ri-building-2-line"></i>
+            </span>
             <span>Projects</span>
+        </a>
+        <a class="dashboard-menu-item" routerLink="/payments">
+            <span class="icon">
+                <i class="ri-money-dollar-circle-line"></i>
+            </span>
+            <span>Payments</span>
         </a>
     </div>
 </div>
