--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -20,51 +20,25 @@
                 <th>ID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
+                <th>Gender</th>
                 <th>Phone</th>
+                <th>Email</th>
+                <th>Role</th>
                 <th>Created At</th>
                 <th></th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td><a routerLink="/user/1/show">1</a></td>
-                <td>Test</td>
-                <td>User</td>
-                <td>8990900012</td>
-                <td>May 12, 2021</td>
-                <td><a routerLink="/user/1/edit">Edit</a></td>
-              </tr>
-              <tr>
-                <td><a routerLink="/user/1/show">1</a></td>
-                <td>Test</td>
-                <td>User</td>
-                <td>8990900012</td>
-                <td>May 12, 2021</td>
-                <td><a routerLink="/user/1/edit">Edit</a></td>
-              </tr>
-              <tr>
-                <td><a routerLink="/user/1/show">1</a></td>
-                <td>Test</td>
-                <td>User</td>
-                <td>8990900012</td>
-                <td>May 12, 2021</td>
-                <td><a routerLink="/user/1/edit">Edit</a></td>
-              </tr>
-              <tr>
-                <td><a routerLink="/user/1/show">1</a></td>
-                <td>Test</td>
-                <td>User</td>
-                <td>8990900012</td>
-                <td>May 12, 2021</td>
-                <td><a routerLink="/user/1/edit">Edit</a></td>
-              </tr>
-              <tr>
-                <td><a routerLink="/user/1/show">1</a></td>
-                <td>Test</td>
-                <td>User</td>
-                <td>8990900012</td>
-                <td>May 12, 2021</td>
-                <td><a routerLink="/user/1/edit">Edit</a></td>
+              <tr *ngFor="let u of users">
+                <td><a routerLink="{{'/user/' + u.id +'/show'}}">{{ u.id }}</a></td>
+                <td>{{ u.first_name }}</td>
+                <td>{{ u.last_name }}</td>
+                <td>{{ u.gender }}</td>
+                <td>{{ u.phone }}</td>
+                <td>{{ u.email }}</td>
+                <td>{{ u.role }}</td>
+                <td>{{ u.created_at }}</td>
+                <td><a routerLink="{{ '/user/' + u.id + '/edit' }}">Edit</a></td>
               </tr>
               
             </tbody>
