team-builder: project: Added team builder component and integrated
team builder API, currently new members can be assigned to project

--- a/src/app/container/sidebar/sidebar.component.html
+++ b/src/app/container/sidebar/sidebar.component.html
@@ -21,6 +21,12 @@
             </span>
             <span>Projects</span>
         </a>
+        <a class="dashboard-menu-item" routerLink="/project/team/build">
+            <span class="icon">
+                <i class="ri-team-line"></i>
+            </span>
+            <span>Build Team</span>
+        </a>
         <a class="dashboard-menu-item" routerLink="/payments">
             <span class="icon">
                 <i class="ri-money-dollar-circle-line"></i>
